- Created diagrams for most of the synchronisation within our code for task 2/3 - Made diagram for executable read layout - Quashed compiler warning for putbuf - fixed bugs with direct calls to palloc - fixed missed sync issue with files - created high res images from diagrams - Added hyperlink for linux kernel checkpatch
Tests pass (vm, userprog)
No compile warning
No linter warnings

--- a/doc/Task 3 - Design Document/Task 3 - Design Document.tex
+++ b/doc/Task 3 - Design Document/Task 3 - Design Document.tex
@@ -4,7 +4,7 @@
 	\date{01/12/21}
 \usepackage[a4paper, total={6in, 8in}]{geometry}
 \usepackage[dvipsnames]{xcolor}
-\usepackage{graphicx, amssymb, amsfonts, amsmath, xcolor, listings, tcolorbox, enumerate}
+\usepackage{graphicx, amssymb, amsfonts, amsmath, xcolor, listings, tcolorbox, enumerate, hyperref}
 
 \graphicspath{{image/}}
 
@@ -107,7 +107,7 @@
 			includes a linting pass over all files that we've edited throughout the 
 			project. The linter we decided to use was the checkpatch linter, which 
 			we sourced from the linux codebase 
-			https://github.com/torvalds/linux/blob/master/scripts/checkpatch.pl. 
+			\href{https://github.com/torvalds/linux/blob/master/scripts/checkpatch.pl}{here}. 
 			It follows the linux kernel style.
 			
 			\subsubsection*{Formatting Scripts}
